--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "etainclub",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "react-native start",
@@ -8,36 +8,37 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "i18next": "^17.0.16",
+    "i18next": "17.0.16",
     "i18next-react-native-language-detector": "^1.0.2",
-    "moment": "^2.24.0",
+    "moment": "2.24.0",
     "react": "16.8.6",
-    "react-i18next": "^10.13.0",
+    "react-i18next": "10.13.0",
     "react-native": "0.60.6",
-    "react-native-device-info": "2.3.2",
-    "react-native-elements": "^1.2.1",
-    "react-native-firebase": "^5.5.6",
-    "react-native-gesture-handler": "^1.4.1",
-    "react-native-gifted-chat": "^0.10.1",
-    "react-native-image-picker": "^1.1.0",
-    "react-native-reanimated": "^1.2.0",
-    "react-native-screens": "^1.0.0-alpha.23",
-    "react-native-splash-screen": "^3.2.0",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-device-info": "3.1.4",
+    "react-native-elements": "1.2.1",
+    "react-native-firebase": "5.5.6",
+    "react-native-gesture-handler": "1.4.1",
+    "react-native-gifted-chat": "0.10.1",
+    "react-native-image-picker": "1.1.0",
+    "react-native-localize": "^1.2.1",
+    "react-native-reanimated": "1.2.0",
+    "react-native-screens": "1.0.0-alpha.23",
+    "react-native-splash-screen": "3.2.0",
+    "react-native-vector-icons": "6.6.0",
     "react-native-video": "^5.1.0-alpha1",
-    "react-navigation": "^4.0.9",
-    "react-navigation-stack": "^1.9.0",
-    "react-navigation-tabs": "^2.5.5",
-    "uuid": "^3.3.3"
+    "react-navigation": "4.0.9",
+    "react-navigation-stack": "1.9.0",
+    "react-navigation-tabs": "2.5.5",
+    "uuid": "3.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.4.0",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.0",
+    "@babel/core": "7.6.2",
+    "@babel/runtime": "7.6.2",
+    "@react-native-community/eslint-config": "0.0.5",
+    "babel-jest": "24.9.0",
+    "eslint": "6.4.0",
+    "jest": "24.9.0",
+    "metro-react-native-babel-preset": "0.56.0",
     "react-test-renderer": "16.8.6"
   },
   "jest": {
