--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "i18next": "17.0.16",
-    "i18next-react-native-language-detector": "^1.0.2",
     "moment": "2.24.0",
     "react": "16.8.6",
     "react-i18next": "10.13.0",
@@ -20,7 +19,7 @@
     "react-native-gesture-handler": "1.4.1",
     "react-native-gifted-chat": "0.10.1",
     "react-native-image-picker": "1.1.0",
-    "react-native-localize": "^1.2.1",
+    "react-native-localize": "1.2.1",
     "react-native-reanimated": "1.2.0",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-splash-screen": "3.2.0",
