setup firebase for ios
app itself is built but app crashes?

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,6 +27,18 @@ target 'etainclub' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  # add the Firebase pod 
+  pod 'Firebase/Core'
+  pod 'Firebase/Auth'
+  pod 'Firebase/Firestore'
+  pod 'Firebase/Functions'
+  pod 'Firebase/Messaging'
+  pod 'Firebase/Storage'
+  pod 'Fabric'
+  pod 'Crashlytics'
+  # add pods for any other desired Firebase products
+  # https://firebase.google.com/docs/ios/setup#available-pods
+
   target 'etainclubTests' do
     inherit! :search_paths
     # Pods for testing
