--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.2",
     "i18next": "17.0.16",
     "moment": "2.24.0",
     "react": "16.8.6",
