created a new branch to test location verification
- setup googlemap
- installed react-native-maps, react-native-geocoding
when a user clicks location search, map is shown

need to show the area that user inputs

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
       android:icon="@mipmap/ic_launcher"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyATYsJhwD85AUziGc221oUXxyL18IiC9mE"
+      />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
