--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "etainclub",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": true,
   "scripts": {
     "start": "react-native start",
@@ -17,10 +17,12 @@
     "react-native-device-info": "3.1.4",
     "react-native-elements": "1.2.1",
     "react-native-firebase": "5.5.6",
+    "react-native-geocoding": "^0.4.0",
     "react-native-gesture-handler": "1.4.1",
     "react-native-gifted-chat": "0.10.1",
     "react-native-image-picker": "1.1.0",
     "react-native-localize": "1.2.1",
+    "react-native-maps": "0.26.1",
     "react-native-reanimated": "1.2.0",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-splash-screen": "3.2.0",
