--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
+    "@react-native-community/geolocation": "1.4.2",
     "i18next": "17.0.16",
     "moment": "2.24.0",
     "react": "16.8.6",
