hid api keys keystore passwords
- used local.properties instead of gradle.properties to keep keystore
password and google map api key for android
- used top level .env to keep geocoding api key for react native

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ build/
 .gradle
 local.properties
 *.iml
-android/gradle.properties
 
 # ios
 build/
@@ -35,6 +34,7 @@ GoogleService-Info.plist
 node_modules/
 npm-debug.log
 yarn-error.log
+.env
 
 # BUCK
 buck-out/
