--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-i18next": "10.13.0",
     "react-native": "0.60.6",
     "react-native-device-info": "3.1.4",
+    "react-native-dotenv": "^0.2.0",
     "react-native-elements": "1.2.1",
     "react-native-firebase": "5.5.6",
     "react-native-geocoding": "^0.4.0",
@@ -42,7 +43,7 @@
     "babel-jest": "24.9.0",
     "eslint": "6.4.0",
     "jest": "24.9.0",
-    "metro-react-native-babel-preset": "0.56.0",
+    "metro-react-native-babel-preset": "^0.57.0",
     "react-test-renderer": "16.8.6"
   },
   "jest": {
