corrected linking problem of google map key
needed to use manifestPlaceholders = [googleMapApiKey:googleMapApiKey]
in build.gradle to set up the key correctly

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -143,6 +143,7 @@ android {
         versionName "1.0"
         multiDexEnabled true
         resConfigs "ko", "en"
+        manifestPlaceholders = [googleMapApiKey:googleMapApiKey]
     }
     splits {
         abi {
