--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "etainclub",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "scripts": {
     "start": "react-native start",
@@ -15,6 +15,7 @@
     "react": "16.8.6",
     "react-i18next": "10.13.0",
     "react-native": "0.60.6",
+    "react-native-code-push": "^5.7.0",
     "react-native-device-info": "3.1.4",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "1.2.1",
