--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -181,6 +181,7 @@ android {
             // Caution! In production, you need to generate your own keystore file.
             // see https://facebook.github.io/react-native/docs/signed-apk-android.
 //            signingConfig signingConfigs.debug
+            shrinkResources enableProguardInReleaseBuilds
             signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
