--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.60.6",
     "react-native-device-info": "3.1.4",
     "react-native-dotenv": "^0.2.0",
+    "react-native-draggable-flatlist": "^1.1.9",
     "react-native-elements": "1.2.1",
     "react-native-firebase": "5.5.6",
     "react-native-geocoding": "^0.4.0",
