--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
-    "i18next": "^17.0.14"
+    "i18next": "^17.0.14",
+    "moment": "^2.24.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
